complete sprint 2 tasks
